empty description mobile bug

--- a/app/assets/stylesheets/front/_root.scss
+++ b/app/assets/stylesheets/front/_root.scss
@@ -98,7 +98,7 @@
   }
 }
 .hide {
-  display: none;
+  display: none !important;
 }
 
 
